# winafl_automization

harness/HncAppShield/: harness.cpp
harness/openssl/: CMakeLists.txt  Readme.md  harness.cpp
harness/openssl2/: CMakeLists.txt  harness.cpp
harness/openssl2/input/: Readme.md
winafl_coverage/: CMakeLists.txt  Readme.md  afl-showmap.c  coverage.md  coverage_graph.bat  graph.py  result.md  troubleshooting.md
winafl_coverage/afl-showmap/: afl-showmap.c
winafl_coverage/fuzz_output/: Readme.md  coverage  fuzzer_stats
winafl_coverage/fuzz_output/queue/: id_000002  id_000005  id_000009  id_000010  id_000013  id_000014  id_000015  id_000016  id_000017  id_000019  id_000022  id_000023  id_000026  id_000028
winafl_coverage/inputCorpus/: Readme.md
winafl_coverage/irfanView/cmin-in/: Readme.md
winafl_coverage/openssl/: Readme.md
winafl_coverage/openssl2/: harness.cpp
winafl_coverage/output/: Readme.md  fuzz_bitmap  plot_data
winafl_coverage/output/queue/: id_000004  id_000006  id_000008  id_000011  id_000012  id_000020  id_000024  id_000025  id_000027  id_000029  id_000031
winafl_offset/: Readme.md
winafl_offset/HncAppShield/: CMakeLists.txt  harness.cpp
winafl_offset/offset/: Readme.md  autooffset.bat  getoffset.cpp
